plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.comparemydevice'
version = '1.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	flywayVersion = '10.10.0'
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.modelmapper:modelmapper:3.1.1'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	implementation 'commons-io:commons-io:2.15.1'

	// Flyway (core + DB-specific modules you might use)
	implementation "org.flywaydb:flyway-core:${flywayVersion}"
	runtimeOnly  "org.flywaydb:flyway-database-postgresql:${flywayVersion}" // only if you still use Postgres anywhere
	runtimeOnly  "org.flywaydb:flyway-mysql:${flywayVersion}"               // ✅ correct artifact for MySQL

	// JDBC drivers (runtime only; Spring picks the right one via URL)
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.mysql:mysql-connector-j:8.4.0'
	runtimeOnly 'com.h2database:h2'  // only used by your dev/test profile

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
	testImplementation 'org.mockito:mockito-core:5.10.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
}

tasks.named('test') {
	useJUnitPlatform()
}